tests/ui/consts/const-err-multi.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-err-multi.rs:1:19
   |
LL | pub const A: i8 = -i8::MIN;
   |                   ^^^^^^^^ attempt to negate `i8::MIN`, which would overflow

note: erroneous constant encountered
  --> $DIR/const-err-multi.rs:3:19
   |
LL | pub const B: i8 = A;
   |                   ^

note: erroneous constant encountered
  --> $DIR/const-err-multi.rs:5:19
   |
LL | pub const C: u8 = A as u8;
   |                   ^

note: erroneous constant encountered
  --> $DIR/const-err-multi.rs:7:24
   |
LL | pub const D: i8 = 50 - A;
   |                        ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
